--- a/jsp/src/main/webapp/shoppingmall/security/login_check.jspf
+++ b/jsp/src/main/webapp/shoppingmall/security/login_check.jspf
@@ -9,7 +9,7 @@
 
 	if(loginMember==null) {
 		out.println("<script type='text/javascript'>");
-		out.println("location.href='"+request.getContextPath()+"/index.jsp?group=error&worker=error_400'");
+		out.println("location.href='"+request.getContextPath()+"/shoppingmall/index.jsp?group=error&worker=error_400'");
 		out.println("</script>");
 		return;
 	}
