--- a/jsp/src/main/webapp/shoppingmall/security/admin_check.jspf
+++ b/jsp/src/main/webapp/shoppingmall/security/admin_check.jspf
@@ -8,7 +8,7 @@
 
 	if(loginMember==null || loginMember.getMemberStatus()!=9) {
 		out.println("<script type='text/javascript'>");
-		out.println("location.href='"+request.getContextPath()+"/index.jsp?group=error&worker=error_400'");
+		out.println("location.href='"+request.getContextPath()+"/shoppingmall/index.jsp?group=error&worker=error_400'");
 		out.println("</script>");
 		return;
 	}
