--- a/jsp/src/main/webapp/shoppingmall/security/login_returnUrl.jspf
+++ b/jsp/src/main/webapp/shoppingmall/security/login_returnUrl.jspf
@@ -9,7 +9,7 @@
 	//바인딩된 세션에서 권한 관련 정보의 속성값을 객체(로그인 상태의 사용자정보)로 반환받아 저장
 	MemberDTO loginMember=(MemberDTO)session.getAttribute("loginMember");
 	
-	//비로그인 상태의 사용자가 JSP 문서를 요청한 경우 [member/member_login.jsp] 문서로 이동하기
+	//비로그인 상태의 사용자가 JSP 문서를 요청한 경우 [/shoppingmall/member/member_login.jsp] 문서로 이동하기
 	//위한 URL 주소를 클라이언트에게 전달하여 응답
 	// => 로그인 후 기존 요청 JSP 문서로 이동되도록 설정
 	if(loginMember==null) {
@@ -35,7 +35,7 @@
 		//로그인 후 요청할 JSP 문서의 URL 주소를 질의문자열로 전달
 		out.println("<script type='text/javascript'>");
 		out.println("location.href='"+request.getContextPath()
-				+"/index.jsp?group=member&worker=member_login&returnUrl="+returnUrl+"';");
+				+"/shoppingmall/index.jsp?group=member&worker=member_login&returnUrl="+returnUrl+"';");
 		out.println("</script>");
 		return;
 	}
